[tool.poetry]
name = "docarray_min_example"
version = "0.1.0"
description = ""
authors = ["eschmidt42 <11818904+eschmidt42@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
docarray = {extras = ["common"], version = "^0.13.27"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
